add summary for chapters 2 and 3

--- a/Chapter3.ipynb
+++ b/Chapter3.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## chapter introduction by Halil Hasmer\n",
+    "\n",
+    "This chapter introduces matplotlib, which I am also familiar with, and adding/modifying pandas dataframes.\n",
+    "\n",
+    "Note for myself: I am still not okay with row to row iterations in pandas. I should look into that more (maybe exercise on iterrows() ?)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "hideCode": false,
     "hidePrompt": false
