--- a/Chapter_2.ipynb
+++ b/Chapter_2.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## chapter introduction by Halil Hasmer\n",
+    "\n",
+    "This chapter introduces pandas_datareader library and how to get market information using various sites' API through the library.\n",
+    "\n",
+    "pandas_datareader does not require any API keys etc. so its rather easy to understand.\n",
+    "\n",
+    "Also, the chapter explains about saving and loading .csv files and playing around with them using pandas dataframes. I am pretty familiar with it so it was only a brief summary for me..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "hideCode": false,
     "hidePrompt": false
