summarize chapter 4 and load chapter 5

--- a/Chapter_4.ipynb
+++ b/Chapter_4.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## chapter introduction by Halil Hasmer"
+    "## chapter introduction by Halil Hasmer\n",
+    "\n",
+    "this chapter includes handling timezones and goes a bit into calculating %-returns and correleatins between different financial instruments"
    ]
   },
   {
