--- a/Dealing With NaNs.ipynb
+++ b/Dealing With NaNs.ipynb
@@ -9,7 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import talib\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +57,7 @@
        "False"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +77,7 @@
        "Series([], Name: Close, dtype: float64)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +98,7 @@
        "0"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +118,7 @@
        "60.04999923706055"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,14 +136,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_16448\\4051092006.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_12940\\4051092006.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -153,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +181,7 @@
        "nan"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +205,7 @@
        "numpy.float64"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +256,7 @@
        "       73.51750183, 68.31999969, 65.51249695, 66.91249847, 63.15000153])"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +295,7 @@
        "nan"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +322,7 @@
        "<AxesSubplot:xlabel='Date'>"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -343,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +361,7 @@
        "<AxesSubplot:xlabel='Date'>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -377,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +395,7 @@
        "<AxesSubplot:xlabel='Date'>"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -416,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +434,7 @@
        "<AxesSubplot:xlabel='Date'>"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -443,7 +452,9 @@
     }
    ],
    "source": [
-    "data.ffill().plot()"
+    "data.ffill().plot()\n",
+    "\n",
+    "# best alternative is to use forward filling"
    ]
   },
   {
@@ -462,11 +473,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Date\n",
+       "2019-12-31         NaN\n",
+       "2020-01-02    0.019592\n",
+       "2020-01-03   -0.016006\n",
+       "2020-01-06    0.004194\n",
+       "2020-01-07    0.012107\n",
+       "2020-01-08    0.001876\n",
+       "2020-01-09    0.010983\n",
+       "2020-01-10    0.005349\n",
+       "2020-01-13    0.031352\n",
+       "2020-01-14   -0.018652\n",
+       "Name: Close, dtype: float64"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ret = data.ffill().pct_change()"
+    "ret = data.ffill().pct_change()\n",
+    "print(ret.isna().values.any())\n",
+    "ret.head(10)"
    ]
   },
   {
@@ -478,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +529,7 @@
        "<AxesSubplot:xlabel='Date'>"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -505,7 +547,9 @@
     }
    ],
    "source": [
-    "ret.fillna(0).plot()"
+    "ret.fillna(0).plot()\n",
+    "\n",
+    "# first we fill NaN value with 0, that means there was no return that day, which makes sense"
    ]
   },
   {
