--- a/Chapter5_exercises.ipynb
+++ b/Chapter5_exercises.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "      <th>2004-08-19 00:00:00</th>\n",
        "      <td>0.468886</td>\n",
        "      <td>50.220219</td>\n",
-       "      <td>50.108818</td>\n",
+       "      <td>49.508266</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.548393</td>\n",
        "      <td>50.220219</td>\n",
@@ -149,7 +149,7 @@
        "      <th>2004-08-20 00:00:00</th>\n",
        "      <td>0.470260</td>\n",
        "      <td>54.209209</td>\n",
-       "      <td>50.321285</td>\n",
+       "      <td>49.718182</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.550000</td>\n",
        "      <td>54.209209</td>\n",
@@ -173,7 +173,7 @@
        "      <th>2004-08-23 00:00:00</th>\n",
        "      <td>0.474535</td>\n",
        "      <td>54.754753</td>\n",
-       "      <td>49.967152</td>\n",
+       "      <td>49.368279</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.555000</td>\n",
        "      <td>54.754753</td>\n",
@@ -197,7 +197,7 @@
        "      <th>2004-08-24 00:00:00</th>\n",
        "      <td>0.487819</td>\n",
        "      <td>52.487488</td>\n",
-       "      <td>50.002571</td>\n",
+       "      <td>49.403275</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.570536</td>\n",
        "      <td>52.487488</td>\n",
@@ -221,7 +221,7 @@
        "      <th>2004-08-25 00:00:00</th>\n",
        "      <td>0.504614</td>\n",
        "      <td>53.053055</td>\n",
-       "      <td>50.215054</td>\n",
+       "      <td>49.613216</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.590179</td>\n",
        "      <td>53.053055</td>\n",
@@ -250,11 +250,11 @@
        "                    Adj Close                               Close             \\\n",
        "                         AAPL      GOOGL        IBM YUT      AAPL      GOOGL   \n",
        "Date                                                                           \n",
-       "2004-08-19 00:00:00  0.468886  50.220219  50.108818 NaN  0.548393  50.220219   \n",
-       "2004-08-20 00:00:00  0.470260  54.209209  50.321285 NaN  0.550000  54.209209   \n",
-       "2004-08-23 00:00:00  0.474535  54.754753  49.967152 NaN  0.555000  54.754753   \n",
-       "2004-08-24 00:00:00  0.487819  52.487488  50.002571 NaN  0.570536  52.487488   \n",
-       "2004-08-25 00:00:00  0.504614  53.053055  50.215054 NaN  0.590179  53.053055   \n",
+       "2004-08-19 00:00:00  0.468886  50.220219  49.508266 NaN  0.548393  50.220219   \n",
+       "2004-08-20 00:00:00  0.470260  54.209209  49.718182 NaN  0.550000  54.209209   \n",
+       "2004-08-23 00:00:00  0.474535  54.754753  49.368279 NaN  0.555000  54.754753   \n",
+       "2004-08-24 00:00:00  0.487819  52.487488  49.403275 NaN  0.570536  52.487488   \n",
+       "2004-08-25 00:00:00  0.504614  53.053055  49.613216 NaN  0.590179  53.053055   \n",
        "\n",
        "                                        High             ...        Low      \\\n",
        "                           IBM YUT      AAPL      GOOGL  ...        IBM YUT   \n",
@@ -286,7 +286,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "       8.30909091, 8.38181818, 8.45454545, 8.52727273, 8.6       ])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 3.0\n",
+      "1 -1.0\n",
+      "2 -6.333333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, func in enumerate([lambda x:x**2+3, lambda x: x**2-2*x, lambda x: 3*x**2+4*x-5]):\n",
+    "    print(i, minimize(func, 0)[\"fun\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 3.0, 1: -1.0, 2: -6.333333333333333}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{key: minimize(value, 0)[\"fun\"] for key, value in enumerate([lambda x:x**2+3, lambda x: x**2-2*x, lambda x: 3*x**2+4*x-5])}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +489,7 @@
       "    specify the function.\n",
       "x0 : ndarray, shape (n,)\n",
       "    Initial guess. Array of real elements of size (n,),\n",
-      "    where ``n`` is the number of independent variables.\n",
+      "    where 'n' is the number of independent variables.\n",
       "args : tuple, optional\n",
       "    Extra arguments passed to the objective function and its\n",
       "    derivatives (`fun`, `jac` and `hess` functions).\n",
@@ -474,7 +514,7 @@
       "          see below for description.\n",
       "\n",
       "    If not given, chosen to be one of ``BFGS``, ``L-BFGS-B``, ``SLSQP``,\n",
-      "    depending on whether or not the problem has constraints or bounds.\n",
+      "    depending if the problem has constraints or bounds.\n",
       "jac : {callable,  '2-point', '3-point', 'cs', bool}, optional\n",
       "    Method for computing the gradient vector. Only for CG, BFGS,\n",
       "    Newton-CG, L-BFGS-B, TNC, SLSQP, dogleg, trust-ncg, trust-krylov,\n",
@@ -499,35 +539,40 @@
       "    obey any specified `bounds`.\n",
       "hess : {callable, '2-point', '3-point', 'cs', HessianUpdateStrategy}, optional\n",
       "    Method for computing the Hessian matrix. Only for Newton-CG, dogleg,\n",
-      "    trust-ncg, trust-krylov, trust-exact and trust-constr.\n",
-      "    If it is callable, it should return the Hessian matrix:\n",
+      "    trust-ncg, trust-krylov, trust-exact and trust-constr. If it is\n",
+      "    callable, it should return the Hessian matrix:\n",
       "\n",
       "        ``hess(x, *args) -> {LinearOperator, spmatrix, array}, (n, n)``\n",
       "\n",
-      "    where ``x`` is a (n,) ndarray and ``args`` is a tuple with the fixed\n",
-      "    parameters.\n",
-      "    The keywords {'2-point', '3-point', 'cs'} can also be used to select\n",
-      "    a finite difference scheme for numerical estimation of the hessian.\n",
-      "    Alternatively, objects implementing the `HessianUpdateStrategy`\n",
-      "    interface can be used to approximate the Hessian. Available\n",
-      "    quasi-Newton methods implementing this interface are:\n",
+      "    where x is a (n,) ndarray and `args` is a tuple with the fixed\n",
+      "    parameters. LinearOperator and sparse matrix returns are only allowed\n",
+      "    for 'trust-constr' method. Alternatively, the keywords\n",
+      "    {'2-point', '3-point', 'cs'} select a finite difference scheme\n",
+      "    for numerical estimation. Or, objects implementing the\n",
+      "    `HessianUpdateStrategy` interface can be used to approximate\n",
+      "    the Hessian. Available quasi-Newton methods implementing\n",
+      "    this interface are:\n",
       "\n",
       "        - `BFGS`;\n",
       "        - `SR1`.\n",
       "\n",
-      "    Not all of the options are available for each of the methods; for\n",
-      "    availability refer to the notes.\n",
+      "    Whenever the gradient is estimated via finite-differences,\n",
+      "    the Hessian cannot be estimated with options\n",
+      "    {'2-point', '3-point', 'cs'} and needs to be\n",
+      "    estimated using one of the quasi-Newton strategies.\n",
+      "    'trust-exact' cannot use a finite-difference scheme, and must be used\n",
+      "    with a callable returning an (n, n) array.\n",
       "hessp : callable, optional\n",
       "    Hessian of objective function times an arbitrary vector p. Only for\n",
       "    Newton-CG, trust-ncg, trust-krylov, trust-constr.\n",
-      "    Only one of `hessp` or `hess` needs to be given. If `hess` is\n",
-      "    provided, then `hessp` will be ignored. `hessp` must compute the\n",
+      "    Only one of `hessp` or `hess` needs to be given.  If `hess` is\n",
+      "    provided, then `hessp` will be ignored.  `hessp` must compute the\n",
       "    Hessian times an arbitrary vector:\n",
       "\n",
       "        ``hessp(x, p, *args) ->  ndarray shape (n,)``\n",
       "\n",
-      "    where ``x`` is a (n,) ndarray, ``p`` is an arbitrary vector with\n",
-      "    dimension (n,) and ``args`` is a tuple with the fixed\n",
+      "    where x is a (n,) ndarray, p is an arbitrary vector with\n",
+      "    dimension (n,) and `args` is a tuple with the fixed\n",
       "    parameters.\n",
       "bounds : sequence or `Bounds`, optional\n",
       "    Bounds on variables for Nelder-Mead, L-BFGS-B, TNC, SLSQP, Powell, and\n",
@@ -538,7 +583,7 @@
       "           is used to specify no bound.\n",
       "\n",
       "constraints : {Constraint, dict} or List of {Constraint, dict}, optional\n",
-      "    Constraints definition. Only for COBYLA, SLSQP and trust-constr.\n",
+      "    Constraints definition (only for COBYLA, SLSQP and trust-constr).\n",
       "\n",
       "    Constraints for 'trust-constr' are defined as a single object or a\n",
       "    list of objects specifying constraints to the optimization problem.\n",
@@ -659,7 +704,7 @@
       "quadratic subproblems are solved almost exactly [13]_. This\n",
       "algorithm requires the gradient and the Hessian (which is\n",
       "*not* required to be positive definite). It is, in many\n",
-      "situations, the Newton method to converge in fewer iterations\n",
+      "situations, the Newton method to converge in fewer iteraction\n",
       "and the most recommended for small and medium-size problems.\n",
       "\n",
       "**Bound-Constrained minimization**\n",
@@ -724,8 +769,8 @@
       "implemented in SciPy and the most appropriate for large-scale problems.\n",
       "For equality constrained problems it is an implementation of Byrd-Omojokun\n",
       "Trust-Region SQP method described in [17]_ and in [5]_, p. 549. When\n",
-      "inequality constraints are imposed as well, it swiches to the trust-region\n",
-      "interior point method described in [16]_. This interior point algorithm,\n",
+      "inequality constraints  are imposed as well, it swiches to the trust-region\n",
+      "interior point  method described in [16]_. This interior point algorithm,\n",
       "in turn, solves inequality constraints by introducing slack variables\n",
       "and solving a sequence of equality-constrained barrier problems\n",
       "for progressively smaller values of the barrier parameter.\n",
@@ -739,34 +784,9 @@
       "the gradient and the Hessian may be approximated using\n",
       "three finite-difference schemes: {'2-point', '3-point', 'cs'}.\n",
       "The scheme 'cs' is, potentially, the most accurate but it\n",
-      "requires the function to correctly handle complex inputs and to\n",
+      "requires the function to correctly handles complex inputs and to\n",
       "be differentiable in the complex plane. The scheme '3-point' is more\n",
-      "accurate than '2-point' but requires twice as many operations. If the\n",
-      "gradient is estimated via finite-differences the Hessian must be\n",
-      "estimated using one of the quasi-Newton strategies.\n",
-      "\n",
-      "**Method specific options for the** `hess` **keyword**\n",
-      "\n",
-      "+--------------+------+----------+-------------------------+-----+\n",
-      "| method/Hess  | None | callable | '2-point/'3-point'/'cs' | HUS |\n",
-      "+==============+======+==========+=========================+=====+\n",
-      "| Newton-CG    | x    | (n, n)   | x                       | x   |\n",
-      "|              |      | LO       |                         |     |\n",
-      "+--------------+------+----------+-------------------------+-----+\n",
-      "| dogleg       |      | (n, n)   |                         |     |\n",
-      "+--------------+------+----------+-------------------------+-----+\n",
-      "| trust-ncg    |      | (n, n)   | x                       | x   |\n",
-      "+--------------+------+----------+-------------------------+-----+\n",
-      "| trust-krylov |      | (n, n)   | x                       | x   |\n",
-      "+--------------+------+----------+-------------------------+-----+\n",
-      "| trust-exact  |      | (n, n)   |                         |     |\n",
-      "+--------------+------+----------+-------------------------+-----+\n",
-      "| trust-constr | x    | (n, n)   |  x                      | x   |\n",
-      "|              |      | LO       |                         |     |\n",
-      "|              |      | sp       |                         |     |\n",
-      "+--------------+------+----------+-------------------------+-----+\n",
-      "\n",
-      "where LO=LinearOperator, sp=Sparse matrix, HUS=HessianUpdateStrategy\n",
+      "accurate than '2-point' but requires twice as many operations.\n",
       "\n",
       "**Custom minimizers**\n",
       "\n",
@@ -901,7 +921,7 @@
       "...                constraints=cons)\n",
       "\n",
       "It should converge to the theoretical solution (1.4 ,1.7).\n",
-      "\u001b[1;31mFile:\u001b[0m      c:\\users\\owner\\anaconda3\\envs\\env-01\\lib\\site-packages\\scipy\\optimize\\_minimize.py\n",
+      "\u001b[1;31mFile:\u001b[0m      c:\\users\\user\\anaconda3\\envs\\env-01\\lib\\site-packages\\scipy\\optimize\\_minimize.py\n",
       "\u001b[1;31mType:\u001b[0m      function\n"
      ]
     }
@@ -912,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +971,7 @@
        "{0: 3.0, 1: -1.0, 2: -6.333333333333333}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
